--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,5 @@ theme:
 nav:
   - Tema 1-Introducció: https://asalvadorc.github.io/BBDD_Tema1
   - Tema 2-Model Entitat-Relació: https://asalvadorc.github.io/BBDD_Tema2
+  - Tema 3-Model Relacional: https://asalvadorc.github.io/BBDD_Tema3
 
